<resources>

    <string name="app_name">Prototype</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_connection">SP Prototype</string>
    <string name="netID">NetID</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="add">Add</string>
    <string name="add_menu">Add a contact</string>
    <string name="call_menu">Call a contact</string>
    <string name="chat_menu">Chat a contact</string>
    <string name="logout_menu">Logout</string>
    <string name="contacts_menu">Contacts</string>    
    <string name="title_activity_request">Pending Requests</string>
    <string name="title_activity_chat">Chat</string>
    <string name="reply">Send a reply</string>
    <string name="send">Send</string>
    <string name="accept_desc">Accept this request</string>
    <string name="deny_desc">Deny this request</string>
    <string name="add_empty">You have no contacts yet. Click here to add.</string>
    <string name="add_name">Contact Name</string>
    <string name="add_netid">Contact NetID</string>

</resources>