<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/chat_menu"
        android:title="@string/chat_menu"
        android:icon="@drawable/chat_menu"
        android:showAsAction="always"
        style="@style/Theme.Sherlock" />
    
    <item android:id="@+id/call_menu"
        android:title="@string/call_menu"
        android:icon="@drawable/call_menu"
        android:showAsAction="always"
        style="@style/Theme.Sherlock" />
    
    <item android:id="@+id/status_menu"
        android:title="@string/logout_menu"
        android:icon="@drawable/status_menu"
        android:showAsAction="always"
        style="@style/Theme.Sherlock" />    
</menu>
